--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -20,6 +20,22 @@
   background-color: #FF4301;
 }
 
-body {
+// body {
+//   // min-height: 100vh;
+//   padding-bottom: 60px;
+// }
+
+
+#page-content {
   min-height: 100vh;
+  position: relative;
+  margin: 0;
+}
+
+.footer-log {
+  position: absolute;
+  bottom: 0;
+
+  height: 35px;
+  width: 100%;
 }
